<resources>
    <string name="app_name">List of notes</string>
    <string name="format_date">dd.MM.yyyy</string>
    <string name="title_toolbar_on_list">List of notes</string>
    <string name="search">Search</string>
    <string name="add_new_note">Add new note</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="avatar">Avatar</string>
    <string name="user_name">Pupkin</string>
    <string name="user_email">pupkin@abc.com</string>
    <string name="info">info</string>
    <string name="title_caption">Caption:</string>
    <string name="edit_hint_input_caption">input caption</string>
    <string name="edit_description">Description:</string>
    <string name="edit_hint_input_description">input description</string>
    <string name="edit_create_date">Create date:</string>
    <string name="apply_edit">Apply</string>
    <string name="un_sign">Un sign</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="title_dialog_delete">Delete note</string>
    <string name="message_dialog_delete">You have selected the note with title \"%s\" that you want to delete. Complete the operation?</string>
    <string name="message_dialog_delete_canceled">The action to delete note \"%s\" has canceled.</string>
    <string name="vk_auth">VK auth</string>
    <integer name="com_vk_sdk_AppId">7896364</integer>
</resources>