<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_nav_header"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/avatar"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/purple_500"
        android:src="@drawable/avatar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/unsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/un_sign"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</FrameLayout>